--- a/Products.html
+++ b/Products.html
@@ -224,15 +224,14 @@
                     <div class="col-lg-3 col-md-6">
                         <div class="footer-widget-item pera-content">
                             <div class="footer-menu-widget ul-li-block">
-                                <h3 class="el-widget-title"><a href="about.html">About Company</a></h3>
-
+                                <h3 class="el-widget-title"><a href="news.html">Industry information</a></h3>
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6">
                         <div class="footer-widget-item pera-content">
                             <div class="footer-menu-widget ul-li-block">
-                                <h3 class="el-widget-title"><a href="technology.html">Our Technology</a></h3>
+                                <h3 class="el-widget-title"><a href="technology.html"></a></h3>
 
                             </div>
                         </div>
@@ -244,9 +243,10 @@
                                 <div class="loaction-select position-relative">
                                     <p>74-76 Beaconsfield Road，Moss Vale</p>
                                 </div>
-                                <!---<div class="footer-map">
-                                    <div class="earth3dmap-com"><iframe id="iframemap" src="https://ditu.google.cn/maps?q=newyork&amp;ie=UTF8&amp;iwloc=&amp;output=embed" width="100%" height="170" frameborder="0" scrolling="no"></iframe></div>
-                                </div>--->
+                                <div class="footer-map">
+
+                                    <img style="height: 100%" src="assets/img/contact/1.jpg">
+                                </div>
                             </div>
                         </div>
                     </div>
