--- a/blog-single.html
+++ b/blog-single.html
@@ -452,153 +452,57 @@
 
 <!-- Start of Footer section
 	============================================= -->
-	<footer id="footer-id" class="footer-section">
-		<div class="newslatter-section">
-			<div class="container">
-				<div class="newslatter-content clearfix">
-					<div class="row">
-						<div class="col-lg-6">
-							<div class="newslatter-icon float-left">
-								<i class="icon-envelope"></i>
-							</div>
-							<div class="newslatter-text">
-								<h2>Signup For The Latest Updates</h2>
-							</div>
-							
-						</div>
-						<div class="col-lg-6">
-							<div class="newslatter-form">
-								<div class="newslatter-form position-relative">
-									<form action="#">
-										<input class="email" name="email" type="email">
-										<div class="nws-button position-absolute text-capitalize">
-											<button class="hover-btn" type="submit" value="Submit"> Subscribe <i class="flaticon-next"></i></button>
-										</div>
-									</form>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="footer-content">
-			<div class="container">
-				<div class="footer-contact-info">
-					<div class="row">
-						<div class="col-lg-3">
-							<div class="footer-icon-text-contact-info headline pera-content">
-								<p><i class="icon-pin"></i> Our Office Location</p>
-								<h3>XXX</h3>
-							</div>
-						</div>
-						<div class="col-lg-3">
-							<div class="footer-icon-text-contact-info headline pera-content">
-								<p><i class="icon-call-in"></i> Any Questions?</p>
-								<h3>XXX</h3>
-							</div>
-						</div>
-						<div class="col-lg-3">
-							<div class="footer-icon-text-contact-info headline pera-content">
-								<p><i class="icon-envelope-letter"></i> Send Email</p>
-								<h3>XXX</h3>
-							</div>
-						</div>
-						<div class="col-lg-3">
-							<div class="footer-icon-text-contact-info headline pera-content">
-								<p><i class="far fa-clock"></i> Monday to Friday</p>
-								<h3>9:00 am - 6:00 pm</h3>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="footer-widget-area">
-					<div class="row">
-						<div class="col-lg-3 col-md-6">
-							<div class="footer-widget-item pera-content">
-								<div class="footer-logo-widget">
-									<a class="footer-logo" href="#"><img src="assets/img/logo/f-logo.png" alt=""></a>
-									<p>At dolore magna aliqua enim veniam
-										quis nostrud minim exercitationery ulam
-										aliquip exa commodoretert et consequat duis
-									aut irure</p>
-									<div class="footer-social">
-										<a href="#"><i class="fab fa-facebook-f"></i></a>
-										<a href="#"><i class="fab fa-twitter"></i></a>
-										<a href="#"><i class="fab fa-google-plus-g"></i></a>
-										<a href="#"><i class="fab fa-linkedin-in"></i></a>
-										<a href="#"><i class="fab fa-vimeo-v"></i></a>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="col-lg-3 col-md-6">
-							<div class="footer-widget-item pera-content">
-								<div class="footer-menu-widget ul-li-block">
-									<h3 class="el-widget-title">About Company</h3>
-									<ul>
-										<li><a href="#">Professional Monitoring</a></li>
-										<li><a href="#">Installation Services</a></li>
-										<li><a href="#">History & Experience</a></li>
-										<li><a href="#">Technical Staff</a></li>
-										<li><a href="#">Free Support Center</a></li>
-										<li><a href="#">Meet Our Experts</a></li>
-										<li><a href="#">Installation Services</a></li>
-									</ul>
-								</div>
-							</div>
-						</div>
-						<div class="col-lg-3 col-md-6">
-							<div class="footer-widget-item pera-content">
-								<div class="footer-menu-widget ul-li-block">
-									<h3 class="el-widget-title">Our Solutions</h3>
-									<ul>
-										<li><a href="#">Hybrid Energy</a></li>
-										<li><a href="#">Solar Power</a></li>
-										<li><a href="#">Water Turbines</a></li>
-										<li><a href="#">BioFuel Energy</a></li>
-										<li><a href="#">Renewable Integration</a></li>
-										<li><a href="#">Meet Our Experts</a></li>
-									</ul>
-								</div>
-							</div>
-						</div>
-						<div class="col-lg-3 col-md-6">
-							<div class="footer-widget-item pera-content">
-								<div class="footer-location-widget ul-li-block">
-									<h3 class="el-widget-title">Our Locations</h3>
-									<div class="loaction-select position-relative">
-										<select>
-											<option>
-												Newyork, USA
-											</option>
-											<option>
-												London, UK
-											</option>
-											<option>
-												Paris, France
-											</option>
-										</select>
-									</div>
-									<div class="footer-map">
-										<div class="earth3dmap-com"><iframe id="iframemap" src="https://ditu.google.cn/maps?q=newyork&amp;ie=UTF8&amp;iwloc=&amp;output=embed" width="100%" height="170" frameborder="0" scrolling="no"></iframe></div>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="footer-copyright-text text-center">
-			<p>Copyright &copy; 2020.Company name All rights reserved.</p>
-			<div class="copyright-menu">
-				<a href="#">Terms</a>
-				<a href="#"> Privacy Policy </a>
-				<a href="#">Sitemap</a>
-			</div>
-		</div>
-	</footer>
+<footer id="footer-id" class="footer-section">
+
+    <div class="footer-content">
+        <div class="container">
+
+            <br/><br/>
+            <div class="footer-widget-area">
+                <div class="row">
+
+                    <div class="col-lg-3 col-md-6">
+                        <div class="footer-widget-item pera-content">
+                            <div class="footer-menu-widget ul-li-block">
+                                <h3 class="el-widget-title"><a href="news.html">Industry information</a></h3>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6">
+                        <div class="footer-widget-item pera-content">
+                            <div class="footer-menu-widget ul-li-block">
+                                <h3 class="el-widget-title"><a href="technology.html"></a></h3>
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6">
+                        <div class="footer-widget-item pera-content">
+                            <div class="footer-location-widget ul-li-block">
+                                <h3 class="el-widget-title">Our Locations</h3>
+                                <div class="loaction-select position-relative">
+                                    <p>74-76 Beaconsfield Road，Moss Vale</p>
+                                </div>
+                                <div class="footer-map">
+
+                                    <img style="height: 100%" src="assets/img/contact/1.jpg">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="footer-copyright-text text-center">
+        <p>Copyright &copy; 2020.Company name All rights reserved.</p>
+        <div class="copyright-menu">
+            <a href="#">Terms</a>
+            <a href="#"> Privacy Policy </a>
+            <a href="#">Sitemap</a>
+        </div>
+    </div>
+</footer>
 <!-- End of Footer section
 	============================================= -->	
 
