--- a/news.html
+++ b/news.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Home Page 1</title>
+    <title>Service Details</title>
     <link rel="shortcut icon" href="assets/img/logo/ficon.png" type="image/x-icon">
     <meta name="author" content="Templines">
     <meta name="description" content="Eltron - Alternative Energy HTML Template">
@@ -23,10 +23,7 @@
 </head>
 
 <body>
-<div id="preloader"></div>
-<div class="up">
-    <a href="#" class="scrollup text-center"><i class="fas fa-chevron-up"></i></a>
-</div>
+
 <!-- Start of header section
 	============================================= -->
 <header id="header_id" class="main_header header_style_one">
@@ -137,52 +134,86 @@
 <!-- End of header section
 	============================================= -->
 
-<!-- Start of Slider section
+<!-- Start of breadcrumb section
 	============================================= -->
-<section id="slider-eltron" class="slider-section slider-style-one">
-    <div id="slider-main" class="slider-content owl-carousel">
-        <div class="main-slider-img-text slide-type-one pera-content headline position-relative">
-            <div class="slider-img-bg img-zooming" data-background="assets/img/slider/sm1.jpg"></div>
-            <div class="background_overlay"></div>
-            <div class="container">
-                <div class="slider-content-box">
-                    <!--                    <span class="title-tag text-uppercase"><img src="assets/icon/icon5.svg" alt="">producing what matters!</span>-->
-                    <h1>Limited resources, infinite recycling
-                    </h1>
-                    <p>Turning trash into treasure starting from me.
-                    </p>
-                    <!--                    <div class="slide-btn-1">-->
-                    <!--                        <a href="#">Learn More <i class="flaticon-next"></i></a>-->
-                    <!--                        <a href="#">Talk With Us 1.700.230.0035</a>-->
-                    <!--                    </div>-->
-                </div>
+<section id="breadcrumb" class="breadcrumb-section position-relative" data-background="assets/img/background/bcbg.jpg">
+    <div class="background_overlay"></div>
+    <div class="container">
+        <div class="breadcrumb-content headline">
+            <h2 class="breadcrumb-title">Products</h2>
+            <div class="breadcrumb_item ul-li">
+                <ul class="breadcrumb">
+                    <li class="breadcrumb-item"><a href="#">Home</a></li>
+                    <li class="breadcrumb-item"><a href="#">What We Do</a></li>
+                    <li class="breadcrumb-item active">News</li>
+                </ul>
             </div>
         </div>
-        <div class="main-slider-img-text slide-type-two pera-content headline position-relative">
-            <div class="slider-img-bg img-zooming" data-background="assets/img/slider/sm2.jpg"></div>
-            <div class="background_overlay"></div>
-            <div class="container">
-                <div class="slider-content-box text-center">
-                    <!--                    <span class="title-tag text-uppercase"><img src="assets/icon/icon5.svg" alt="">producing what matters!</span>-->
-                    <h1>Limited resources, infinite recycling
+    </div>
+</section>
+<!-- End of breadcrumb section
+	============================================= -->
 
-                    </h1>
-                    <p>
-                        Turning trash into treasure starting from me.
-
-                    </p>
-                    <!--                    <div class="slide-btn-1">-->
-                    <!--                        <a href="#">Learn More <i class="flaticon-next"></i></a>-->
-                    <!--                        <a href="#">Global help <i class="flaticon-next"></i></a>-->
-                    <!--                    </div>-->
+<!-- Start of service single section
+	============================================= -->
+<section id="service-details" class="service-details-section">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12 col-md-12">
+                <div class="blog-page-post-item">
+                    <div class="blog-post-thumbnile-text pera-content headline">
+                        <!--								<div class="blog-post-thumb-img position-relative">-->
+                        <!--									<img src="assets/img/blog/bpp1.jpg" alt="">-->
+                        <!--									<div class="blog-category text-uppercase">-->
+                        <!--										<a href="#">solar energy</a>-->
+                        <!--									</div>-->
+                        <!--								</div>-->
+                        <div class="blog-post-text">
+                            <h3><a href="detail.html">2017-18 Australian Plastics Recycling Survey</a></h3>
+                            <p>We acknowledge the time and effort that companies around Australia put into completing
+                                this survey
+                                year-on-year. This support allows the survey to be completed each year, with the outcome
+                                being one
+                                of the most long-running and comprehensive studies of its type in Australia. We would
+                                like to
+                                acknowledge and sincerely thank the following organisations for their input and support
+                                of the 2017–
+                                18 Australian Plastics Recycling Survey
+                            </p>
+                            <div class="excerpt-more"
+                                 style="border-bottom:1px solid #dddddd;padding-bottom: 30px;margin-bottom: 30px;">
+                                <a href="detail.html">Detail <img src="assets/img/arrow2.png" alt=""></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="blog-post-thumbnile-text pera-content headline">
+                        <!--								<div class="blog-post-thumb-img position-relative">-->
+                        <!--									<img src="assets/img/blog/bpp1.jpg" alt="">-->
+                        <!--									<div class="blog-category text-uppercase">-->
+                        <!--										<a href="#">solar energy</a>-->
+                        <!--									</div>-->
+                        <!--								</div>-->
+                        <div class="blog-post-text">
+                            <h3><a href="#">Powering the Energy Generation</a></h3>
+                            <p>Facilis convalis dictums sed ipsum tempore lorem ipsum dolor sit amet consectetur
+                                adipisicing elit sed
+                                do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                                quis nostru
+                                exercitation ullamco laboris nisi ut aliquip ex ea consequat..
+                            </p>
+                            <div class="excerpt-more"
+                                 style="border-bottom:1px solid #dddddd;padding-bottom: 30px;margin-bottom: 30px;">
+                                <a href="#">Detail <img src="assets/img/arrow2.png" alt=""></a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 </section>
-<!-- End of header section
+<!-- End of service single section
 	============================================= -->
-
 
 <!-- Start of Footer section
 	============================================= -->
@@ -248,16 +279,16 @@
 <script src="assets/js/jarallax.js"></script>
 <script src="assets/js/jquery.magnific-popup.min.js"></script>
 <script src="assets/js/appear.js"></script>
-<script src="assets/js/imagesloaded.pkgd.min.js"></script>
-<script src="assets/js/masonry.pkgd.min.js"></script>
 <script src="assets/js/isotope.pkgd.min.js"></script>
+<script src="assets/js/masonry.pkgd.min.js"></script>
+<script src="assets/js/imagesloaded.pkgd.min.js"></script>
 <script src="assets/js/lightbox.js"></script>
 <script src="assets/js/waypoints.min.js"></script>
 <script src="assets/js/jquery.counterup.min.js"></script>
 <script src="assets/js/tilt.jquery.min.js"></script>
 <script src="assets/js/wow.min.js"></script>
 <script src="assets/js/script.js"></script>
-<!---<script src="assets/js/gmap3.min.js"></script>
-<script src="https://ditu.google.cn/maps/api/js?key=AIzaSyC61_QVqt9LAhwFdlQmsNwi5aUJy9B2SyA"></script>--->
+<script src="assets/js/gmap3.min.js"></script>
+<script src="https://ditu.google.cn/maps/api/js?key=AIzaSyC61_QVqt9LAhwFdlQmsNwi5aUJy9B2SyA"></script>
 </body>
 </html>
