--- a/blog.html
+++ b/blog.html
@@ -219,7 +219,7 @@
 		<div class="container">
 			<div class="blog-page-content">
 				<div class="row">
-					<div class="col-lg-8 col-md-12">
+					<div class="col-lg-12 col-md-12">
 						<div class="blog-page-post-item">
 							<div class="blog-post-thumbnile-text pera-content headline">
 								<div class="blog-post-thumb-img position-relative">
@@ -373,115 +373,7 @@
 						</div>
 					</div>
 					<!-- /post item -->
-					<div class="col-lg-4 col-md-12">
-						<div class="blog-sidebar">
-							<div class="blog-sidebar-widget headline pera-content">
-								<div class="search-widget">
-									<h3 class="widget-title">Search</h3>
-									<form action="#">
-										<input class="search-input" type="search" placeholder="keyword...">
-										<button type="submit"><i class="fas fa-search"></i> </button>
-									</form>
-								</div>
-							</div>
-							<!-- /sidebar-widget -->
-							<div class="blog-sidebar-widget headline pera-content">
-								<div class="category-widget ul-li-block">
-									<h3 class="widget-title">Categories</h3>
-									<ul>
-										<li><a href="#">Oil Industry</a></li>
-										<li><a href="#">Solar Energy</a></li>
-										<li><a href="#">Hydro Electricity</a></li>
-										<li><a href="#">Power Plants</a></li>
-										<li><a href="#">Water Turbines</a></li>
-									</ul>
-								</div>
-							</div>
-							<!-- /sidebar-widget -->
-							<div class="blog-sidebar-widget headline pera-content">
-								<div class="recent-post-widget">
-									<h3 class="widget-title">Recent Posts</h3>
-									<div class="latest-blog-widget">
-										<div class="blog-img-content">
-											<div class="blog-img float-left">
-												<img src="assets/img/blog/rcp1.jpg" alt="">
-											</div>
-											<div class="blog-text headline">
-												<h3> <a href="#">Benefits of eltron
-												energy for use</a></h3>
-												<span>April 25, 2020</span>
-											</div>
-										</div>
-										<!-- /blog post -->
-										<div class="blog-img-content">
-											<div class="blog-img float-left">
-												<img src="assets/img/blog/rcp2.jpg" alt="">
-											</div>
-											<div class="blog-text headline">
-												<h3> <a href="#">We use stat-of-the-
-												art technology</a></h3>
-												<span>April 25, 2020</span>
-											</div>
-										</div>
-										<!-- /blog post -->
-										<div class="blog-img-content">
-											<div class="blog-img float-left">
-												<img src="assets/img/blog/rcp3.jpg" alt="">
-											</div>
-											<div class="blog-text headline">
-												<h3> <a href="#">Building the energy
-												infrastructure</a></h3>
-												<span>April 25, 2020</span>
-											</div>
-										</div>
-										<!-- /blog post -->
-									</div>
-								</div>
-							</div>
-							<!-- /sidebar-widget -->
-							<div class="blog-sidebar-widget headline pera-content">
-								<div class="popular-tag-widget ul-li">
-									<h3 class="widget-title">Popular Tags</h3>
-									<ul>
-										<li><a href="#">Power</a></li>
-										<li><a href="#">Electricity</a></li>
-										<li><a href="#">Energy</a></li>
-										<li><a href="#">Wind Turbine</a></li>
-										<li><a href="#">Tips</a></li>
-										<li><a href="#">Solar Energy</a></li>
-										<li><a href="#">Projects</a></li>
-										<li><a href="#">Hybrid</a></li>
-									</ul>
-								</div>
-							</div>
-							<!-- /sidebar-widget -->
-							<div class="blog-sidebar-widget headline pera-content">
-								<div class="project-gallery-widget clearfix ul-li">
-									<h3 class="widget-title">Popular Tags</h3>
-									<ul>
-										<li><a href="#"><img src="assets/img/gallery/g1.jpg" alt=""></a></li>
-										<li><a href="#"><img src="assets/img/gallery/g2.jpg" alt=""></a></li>
-										<li><a href="#"><img src="assets/img/gallery/g3.jpg" alt=""></a></li>
-										<li><a href="#"><img src="assets/img/gallery/g4.jpg" alt=""></a></li>
-										<li><a href="#"><img src="assets/img/gallery/g5.jpg" alt=""></a></li>
-										<li><a href="#"><img src="assets/img/gallery/g6.jpg" alt=""></a></li>
-									</ul>
-								</div>
-							</div>
-							<!-- /sidebar-widget -->
-							<div class="add-widget text-center pera-content position-relative" data-background="assets/img/background/bcbg.jpg">
-								<div class="background_overlay"></div>
-								<h3>Do you need
-									upgrades, repairs
-									or maintainance
-								services also?</h3>
-								<p>Book a free consultancy
-								with one of our many experts</p>
-								<a href="#">GET in Touch <img src="assets/img/arrow3.png" alt=""></a>
-							</div>
-							<!-- /sidebar-widget -->
-						</div>
-					</div>
+
 				</div>
 			</div>
 		</div>
@@ -491,153 +383,57 @@
 
 <!-- Start of Footer section
 	============================================= -->
-	<footer id="footer-id" class="footer-section">
-		<div class="newslatter-section">
-			<div class="container">
-				<div class="newslatter-content clearfix">
-					<div class="row">
-						<div class="col-lg-6">
-							<div class="newslatter-icon float-left">
-								<i class="icon-envelope"></i>
-							</div>
-							<div class="newslatter-text">
-								<h2>Signup For The Latest Updates</h2>
-							</div>
-							
-						</div>
-						<div class="col-lg-6">
-							<div class="newslatter-form">
-								<div class="newslatter-form position-relative">
-									<form action="#">
-										<input class="email" name="email" type="email">
-										<div class="nws-button position-absolute text-capitalize">
-											<button class="hover-btn" type="submit" value="Submit"> Subscribe <i class="flaticon-next"></i></button>
-										</div>
-									</form>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="footer-content">
-			<div class="container">
-				<div class="footer-contact-info">
-					<div class="row">
-						<div class="col-lg-3">
-							<div class="footer-icon-text-contact-info headline pera-content">
-								<p><i class="icon-pin"></i> Our Office Location</p>
-								<h3>XXX</h3>
-							</div>
-						</div>
-						<div class="col-lg-3">
-							<div class="footer-icon-text-contact-info headline pera-content">
-								<p><i class="icon-call-in"></i> Any Questions?</p>
-								<h3>XXX</h3>
-							</div>
-						</div>
-						<div class="col-lg-3">
-							<div class="footer-icon-text-contact-info headline pera-content">
-								<p><i class="icon-envelope-letter"></i> Send Email</p>
-								<h3>XXX</h3>
-							</div>
-						</div>
-						<div class="col-lg-3">
-							<div class="footer-icon-text-contact-info headline pera-content">
-								<p><i class="far fa-clock"></i> Monday to Friday</p>
-								<h3>9:00 am - 6:00 pm</h3>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="footer-widget-area">
-					<div class="row">
-						<div class="col-lg-3 col-md-6">
-							<div class="footer-widget-item pera-content">
-								<div class="footer-logo-widget">
-									<a class="footer-logo" href="#"><img src="assets/img/logo/f-logo.png" alt=""></a>
-									<p>At dolore magna aliqua enim veniam
-										quis nostrud minim exercitationery ulam
-										aliquip exa commodoretert et consequat duis
-									aut irure</p>
-									<div class="footer-social">
-										<a href="#"><i class="fab fa-facebook-f"></i></a>
-										<a href="#"><i class="fab fa-twitter"></i></a>
-										<a href="#"><i class="fab fa-google-plus-g"></i></a>
-										<a href="#"><i class="fab fa-linkedin-in"></i></a>
-										<a href="#"><i class="fab fa-vimeo-v"></i></a>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="col-lg-3 col-md-6">
-							<div class="footer-widget-item pera-content">
-								<div class="footer-menu-widget ul-li-block">
-									<h3 class="el-widget-title">About Company</h3>
-									<ul>
-										<li><a href="#">Professional Monitoring</a></li>
-										<li><a href="#">Installation Services</a></li>
-										<li><a href="#">History & Experience</a></li>
-										<li><a href="#">Technical Staff</a></li>
-										<li><a href="#">Free Support Center</a></li>
-										<li><a href="#">Meet Our Experts</a></li>
-										<li><a href="#">Installation Services</a></li>
-									</ul>
-								</div>
-							</div>
-						</div>
-						<div class="col-lg-3 col-md-6">
-							<div class="footer-widget-item pera-content">
-								<div class="footer-menu-widget ul-li-block">
-									<h3 class="el-widget-title">Our Solutions</h3>
-									<ul>
-										<li><a href="#">Hybrid Energy</a></li>
-										<li><a href="#">Solar Power</a></li>
-										<li><a href="#">Water Turbines</a></li>
-										<li><a href="#">BioFuel Energy</a></li>
-										<li><a href="#">Renewable Integration</a></li>
-										<li><a href="#">Meet Our Experts</a></li>
-									</ul>
-								</div>
-							</div>
-						</div>
-						<div class="col-lg-3 col-md-6">
-							<div class="footer-widget-item pera-content">
-								<div class="footer-location-widget ul-li-block">
-									<h3 class="el-widget-title">Our Locations</h3>
-									<div class="loaction-select position-relative">
-										<select>
-											<option>
-												Newyork, USA
-											</option>
-											<option>
-												London, UK
-											</option>
-											<option>
-												Paris, France
-											</option>
-										</select>
-									</div>
-									<div class="footer-map">
-										<div class="earth3dmap-com"><iframe id="iframemap" src="https://ditu.google.cn/maps?q=newyork&amp;ie=UTF8&amp;iwloc=&amp;output=embed" width="100%" height="170" frameborder="0" scrolling="no"></iframe></div>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="footer-copyright-text text-center">
-			<p>Copyright &copy; 2020.Company name All rights reserved.</p>
-			<div class="copyright-menu">
-				<a href="#">Terms</a>
-				<a href="#"> Privacy Policy </a>
-				<a href="#">Sitemap</a>
-			</div>
-		</div>
-	</footer>
+<footer id="footer-id" class="footer-section">
+
+    <div class="footer-content">
+        <div class="container">
+
+            <br/><br/>
+            <div class="footer-widget-area">
+                <div class="row">
+
+                    <div class="col-lg-3 col-md-6">
+                        <div class="footer-widget-item pera-content">
+                            <div class="footer-menu-widget ul-li-block">
+                                <h3 class="el-widget-title"><a href="news.html">Industry information</a></h3>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6">
+                        <div class="footer-widget-item pera-content">
+                            <div class="footer-menu-widget ul-li-block">
+                                <h3 class="el-widget-title"><a href="technology.html"></a></h3>
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6">
+                        <div class="footer-widget-item pera-content">
+                            <div class="footer-location-widget ul-li-block">
+                                <h3 class="el-widget-title">Our Locations</h3>
+                                <div class="loaction-select position-relative">
+                                    <p>74-76 Beaconsfield Road，Moss Vale</p>
+                                </div>
+                                <div class="footer-map">
+
+                                    <img style="height: 100%" src="assets/img/contact/1.jpg">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="footer-copyright-text text-center">
+        <p>Copyright &copy; 2020.Company name All rights reserved.</p>
+        <div class="copyright-menu">
+            <a href="#">Terms</a>
+            <a href="#"> Privacy Policy </a>
+            <a href="#">Sitemap</a>
+        </div>
+    </div>
+</footer>
 <!-- End of Footer section
 	============================================= -->	
 
