--- a/detail.html
+++ b/detail.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Home Page 1</title>
+    <title>Service Details</title>
     <link rel="shortcut icon" href="assets/img/logo/ficon.png" type="image/x-icon">
     <meta name="author" content="Templines">
     <meta name="description" content="Eltron - Alternative Energy HTML Template">
@@ -23,10 +23,7 @@
 </head>
 
 <body>
-<div id="preloader"></div>
-<div class="up">
-    <a href="#" class="scrollup text-center"><i class="fas fa-chevron-up"></i></a>
-</div>
+
 <!-- Start of header section
 	============================================= -->
 <header id="header_id" class="main_header header_style_one">
@@ -137,52 +134,46 @@
 <!-- End of header section
 	============================================= -->
 
-<!-- Start of Slider section
+<!-- Start of breadcrumb section
 	============================================= -->
-<section id="slider-eltron" class="slider-section slider-style-one">
-    <div id="slider-main" class="slider-content owl-carousel">
-        <div class="main-slider-img-text slide-type-one pera-content headline position-relative">
-            <div class="slider-img-bg img-zooming" data-background="assets/img/slider/sm1.jpg"></div>
-            <div class="background_overlay"></div>
-            <div class="container">
-                <div class="slider-content-box">
-                    <!--                    <span class="title-tag text-uppercase"><img src="assets/icon/icon5.svg" alt="">producing what matters!</span>-->
-                    <h1>Limited resources, infinite recycling
-                    </h1>
-                    <p>Turning trash into treasure starting from me.
-                    </p>
-                    <!--                    <div class="slide-btn-1">-->
-                    <!--                        <a href="#">Learn More <i class="flaticon-next"></i></a>-->
-                    <!--                        <a href="#">Talk With Us 1.700.230.0035</a>-->
-                    <!--                    </div>-->
-                </div>
-            </div>
-        </div>
-        <div class="main-slider-img-text slide-type-two pera-content headline position-relative">
-            <div class="slider-img-bg img-zooming" data-background="assets/img/slider/sm2.jpg"></div>
-            <div class="background_overlay"></div>
-            <div class="container">
-                <div class="slider-content-box text-center">
-                    <!--                    <span class="title-tag text-uppercase"><img src="assets/icon/icon5.svg" alt="">producing what matters!</span>-->
-                    <h1>Limited resources, infinite recycling
-
-                    </h1>
-                    <p>
-                        Turning trash into treasure starting from me.
-
-                    </p>
-                    <!--                    <div class="slide-btn-1">-->
-                    <!--                        <a href="#">Learn More <i class="flaticon-next"></i></a>-->
-                    <!--                        <a href="#">Global help <i class="flaticon-next"></i></a>-->
-                    <!--                    </div>-->
-                </div>
+<section id="breadcrumb" class="breadcrumb-section position-relative" data-background="assets/img/background/bcbg.jpg">
+    <div class="background_overlay"></div>
+    <div class="container">
+        <div class="breadcrumb-content headline">
+            <h2 class="breadcrumb-title">Products</h2>
+            <div class="breadcrumb_item ul-li">
+                <ul class="breadcrumb">
+                    <li class="breadcrumb-item"><a href="#">Home</a></li>
+                    <li class="breadcrumb-item"><a href="#">What We Do</a></li>
+                    <li class="breadcrumb-item active">News</li>
+                </ul>
             </div>
         </div>
     </div>
 </section>
-<!-- End of header section
+<!-- End of breadcrumb section
 	============================================= -->
 
+<!-- Start of service single section
+	============================================= -->
+<section id="service-details" class="service-details-section">
+    <div class="container">
+        <div class="row">
+<!--            <iframe src="./assets/file/2017-18%20Australian%20Plastics%20Recycling%20Survey.pdf"></iframe>-->
+
+            <object classid="clsid:CA8A9780-280D-11CF-A24D-444553540000" width="100%" height="100%" border="0"><!--IE-->
+                <param name="_Version" value="65539">
+                <param name="_ExtentX" value="20108">
+                <param name="_ExtentY" value="10866">
+                <param name="_StockProps" value="0">
+                <param name="SRC" value="testing_pdf.pdf">
+                <embed src="./assets/file/2017-18%20Australian%20Plastics%20Recycling%20Survey.pdf" width="100%" height="800" href="testing_pdf.pdf"></embed><!--FF-->
+            </object>
+        </div>
+    </div>
+</section>
+<!-- End of service single section
+	============================================= -->
 
 <!-- Start of Footer section
 	============================================= -->
@@ -248,16 +239,16 @@
 <script src="assets/js/jarallax.js"></script>
 <script src="assets/js/jquery.magnific-popup.min.js"></script>
 <script src="assets/js/appear.js"></script>
-<script src="assets/js/imagesloaded.pkgd.min.js"></script>
-<script src="assets/js/masonry.pkgd.min.js"></script>
 <script src="assets/js/isotope.pkgd.min.js"></script>
+<script src="assets/js/masonry.pkgd.min.js"></script>
+<script src="assets/js/imagesloaded.pkgd.min.js"></script>
 <script src="assets/js/lightbox.js"></script>
 <script src="assets/js/waypoints.min.js"></script>
 <script src="assets/js/jquery.counterup.min.js"></script>
 <script src="assets/js/tilt.jquery.min.js"></script>
 <script src="assets/js/wow.min.js"></script>
 <script src="assets/js/script.js"></script>
-<!---<script src="assets/js/gmap3.min.js"></script>
-<script src="https://ditu.google.cn/maps/api/js?key=AIzaSyC61_QVqt9LAhwFdlQmsNwi5aUJy9B2SyA"></script>--->
+<script src="assets/js/gmap3.min.js"></script>
+<script src="https://ditu.google.cn/maps/api/js?key=AIzaSyC61_QVqt9LAhwFdlQmsNwi5aUJy9B2SyA"></script>
 </body>
 </html>
