fix foot and head

--- a/news.html
+++ b/news.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Service Details</title>
+    <title>Plasrefine</title>
     <link rel="shortcut icon" href="assets/img/logo/ficon.png" type="image/x-icon">
-    <meta name="author" content="Templines">
-    <meta name="description" content="Eltron - Alternative Energy HTML Template">
+    <meta name="author" content="">
+    <meta name="description" content="">
     <meta name="keywords"
-          content="	alternative energy, ecology, energy business, green energy, heating, hydropower, nature energy, power saving, recycling, renewable energy, solar energy, Solar Panels, wing turbines">
+          content="	alternative energy, ecology, energy business, green energy, heating, hydropower, ">
     <!-- Mobile Specific Meta -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -33,19 +33,15 @@
                 <div class="col-md-6">
                     <div class="header_top_contact ul-li clearfix">
                         <ul>
-                            <li><i class="icon-call-out"></i> XXX</li>
-                            <li><i class="icon-envelope-letter"></i> XXX</li>
+                            <li><i class="icon-call-out"></i> 1800 810 680</li>
+                            <li><i class="icon-envelope-letter"></i> <a href="mailto:community.input@ghd.com">community.input@ghd.com</a>
+                            </li>
                         </ul>
                     </div>
                 </div>
                 <div class="col-md-6">
                     <div class="header_top_info float-right">
                         <div class="top_info_item top_info_menu ul-li clearfix">
-                            <ul>
-                                <li><a href="#">Careers</a></li>
-                                <li><a href="#">Media</a></li>
-                                <li><a href="#">FAQs</a></li>
-                            </ul>
                         </div>
                         <div class="top_info_item top_info_social ul-li clearfix">
                             <ul>
@@ -64,7 +60,7 @@
     <div class="site-main-menu clearfix">
         <div class="container">
             <div class="brand-logo float-left">
-                <a href="#"><img src="assets/img/logo/logo1.png" alt=""></a>
+                <a href="index.html"><img src="assets/img/logo/logo1.png" alt=""></a>
             </div>
             <nav class="main_navigation desktop-menu ul-li">
                 <ul id="main-nav" class="navbar-nav text-uppercase clearfix">
@@ -123,8 +119,12 @@
                 </nav>
                 <div class="mobile-contact-info text-center ul-li-block">
                     <ul>
-                        <li><i class="icon-call-out"></i> XXX</li>
-                        <li><i class="icon-envelope-letter"></i> XXX</li>
+                        <li><i class="icon-call-out"></i> 1800 810 680</li>
+                        <li><i class="icon-envelope-letter"></i>
+                            <a href="mailto:community.input@ghd.com">
+                                community.input@ghd.com
+                            </a>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -145,7 +145,7 @@
                 <ul class="breadcrumb">
                     <li class="breadcrumb-item"><a href="#">Home</a></li>
                     <li class="breadcrumb-item"><a href="#">What We Do</a></li>
-                    <li class="breadcrumb-item active">News</li>
+                    <li class="breadcrumb-item active">information</li>
                 </ul>
             </div>
         </div>
@@ -162,12 +162,7 @@
             <div class="col-lg-12 col-md-12">
                 <div class="blog-page-post-item">
                     <div class="blog-post-thumbnile-text pera-content headline">
-                        <!--								<div class="blog-post-thumb-img position-relative">-->
-                        <!--									<img src="assets/img/blog/bpp1.jpg" alt="">-->
-                        <!--									<div class="blog-category text-uppercase">-->
-                        <!--										<a href="#">solar energy</a>-->
-                        <!--									</div>-->
-                        <!--								</div>-->
+
                         <div class="blog-post-text">
                             <h3><a href="detail.html">2017-18 Australian Plastics Recycling Survey</a></h3>
                             <p>We acknowledge the time and effort that companies around Australia put into completing
@@ -187,23 +182,23 @@
                         </div>
                     </div>
                     <div class="blog-post-thumbnile-text pera-content headline">
-                        <!--								<div class="blog-post-thumb-img position-relative">-->
-                        <!--									<img src="assets/img/blog/bpp1.jpg" alt="">-->
-                        <!--									<div class="blog-category text-uppercase">-->
-                        <!--										<a href="#">solar energy</a>-->
-                        <!--									</div>-->
-                        <!--								</div>-->
+
                         <div class="blog-post-text">
-                            <h3><a href="#">Powering the Energy Generation</a></h3>
-                            <p>Facilis convalis dictums sed ipsum tempore lorem ipsum dolor sit amet consectetur
-                                adipisicing elit sed
-                                do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                                quis nostru
-                                exercitation ullamco laboris nisi ut aliquip ex ea consequat..
+                            <h3><a href="#">National Waste Report 2018</a></h3>
+                            <p>
+                                This report has been prepared for Department of the Environment and Energy in accordance
+                                with the terms and conditions
+                                of appointment dated 20 September 2017, and is based on the assumptions and exclusions
+                                set out in our scope of work.
+                                Information in this document is current as of 1 July 2018. While all professional care
+                                has been undertaken in preparing this
+                                report, Blue Environment Pty Ltd cannot accept any responsibility for any use of or
+                                reliance on the contents of this report
+                                by any third party.
                             </p>
                             <div class="excerpt-more"
                                  style="border-bottom:1px solid #dddddd;padding-bottom: 30px;margin-bottom: 30px;">
-                                <a href="#">Detail <img src="assets/img/arrow2.png" alt=""></a>
+                                <a href="detail1.html">Detail <img src="assets/img/arrow2.png" alt=""></a>
                             </div>
                         </div>
                     </div>
@@ -218,54 +213,55 @@
 <!-- Start of Footer section
 	============================================= -->
 <footer id="footer-id" class="footer-section">
-
     <div class="footer-content">
         <div class="container">
-
             <br/><br/>
             <div class="footer-widget-area">
                 <div class="row">
 
-                    <div class="col-lg-3 col-md-6">
+                    <div class="col-lg-6 col-md-6">
                         <div class="footer-widget-item pera-content">
                             <div class="footer-menu-widget ul-li-block">
                                 <h3 class="el-widget-title"><a href="news.html">Industry information</a></h3>
+                                <ul>
+                                    <li><a href="detail.html">2017-18 Australian Plastics Recycling Survey</a></li>
+                                    <li><a href="detail1.html">National Waste Report 2018</a></li>
+                                </ul>
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-md-6">
-                        <div class="footer-widget-item pera-content">
-                            <div class="footer-menu-widget ul-li-block">
-                                <h3 class="el-widget-title"><a href="technology.html"></a></h3>
+                    <!--                    <div class="col-lg-3 col-md-6">-->
+                    <!--                        <div class="footer-widget-item pera-content">-->
+                    <!--                            <div class="footer-menu-widget ul-li-block">-->
+                    <!--                                <h3 class="el-widget-title"><a href="technology.html"></a></h3>-->
+                    <!--                            </div>-->
+                    <!--                        </div>-->
+                    <!--                    </div>-->
+                    <!--                    <div class="col-lg-3 col-md-6">-->
+                    <!--                        <div class="footer-widget-item pera-content">-->
+                    <!--                            <div class="footer-location-widget ul-li-block">-->
+                    <!--                                <h3 class="el-widget-title">Our Locations</h3>-->
+                    <!--                                <div class="loaction-select position-relative">-->
+                    <!--                                    <p>74-76 Beaconsfield Road，Moss Vale</p>-->
+                    <!--                                </div>-->
+                    <!--                                <div class="footer-map">-->
 
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6">
-                        <div class="footer-widget-item pera-content">
-                            <div class="footer-location-widget ul-li-block">
-                                <h3 class="el-widget-title">Our Locations</h3>
-                                <div class="loaction-select position-relative">
-                                    <p>74-76 Beaconsfield Road，Moss Vale</p>
-                                </div>
-                                <div class="footer-map">
-
-                                    <img style="height: 100%" src="assets/img/contact/1.jpg">
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                    <!--                                    <img style="height: 100%" src="assets/img/contact/1.jpg">-->
+                    <!--                                </div>-->
+                    <!--                            </div>-->
+                    <!--                        </div>-->
+                    <!--                    </div>-->
                 </div>
             </div>
         </div>
     </div>
     <div class="footer-copyright-text text-center">
-        <p>Copyright &copy; 2020.Company name All rights reserved.</p>
-        <div class="copyright-menu">
-            <a href="#">Terms</a>
-            <a href="#"> Privacy Policy </a>
-            <a href="#">Sitemap</a>
-        </div>
+        <p>Copyright &copy; 2021.Haoming Partner All rights reserved.</p>
+        <!--        <div class="copyright-menu">-->
+        <!--            <a href="#">Terms</a>-->
+        <!--            <a href="#"> Privacy Policy </a>-->
+        <!--            <a href="#">Sitemap</a>-->
+        <!--        </div>-->
     </div>
 </footer>
 <!-- End of Footer section
