--- a/blog.html
+++ b/blog.html
@@ -1,24 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<title>Blog</title>
-	<link rel="shortcut icon" href="assets/img/logo/ficon.png" type="image/x-icon">
-	<meta name="author" content="Templines">
-	<meta name="description" content="Eltron - Alternative Energy HTML Template">
-	<meta name="keywords" content="	alternative energy, ecology, energy business, green energy, heating, hydropower, nature energy, power saving, recycling, renewable energy, solar energy, Solar Panels, wing turbines">
-	<!-- Mobile Specific Meta -->
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="UTF-8">
+    <title>Plasrefine</title>
+    <link rel="shortcut icon" href="assets/img/logo/ficon.png" type="image/x-icon">
+    <meta name="author" content="">
+    <meta name="description" content="">
+    <meta name="keywords"
+          content="	alternative energy, ecology, energy business, green energy, heating, hydropower, ">
+    <!-- Mobile Specific Meta -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<link rel="stylesheet" href="assets/css/owl.carousel.css">
-	<link rel="stylesheet" href="assets/css/fontawesome-all.css">
-	<link rel="stylesheet" href="assets/css/simple-line-icons.css">
-	<link rel="stylesheet" href="assets/css/animate.css">
-	<link rel="stylesheet" href="assets/css/flaticon.css">
-	<link rel="stylesheet" href="assets/css/bootstrap.min.css">
-	<link rel="stylesheet" href="assets/css/video.min.css">
-	<link rel="stylesheet" href="assets/css/lightbox.css">
-	<link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/owl.carousel.css">
+    <link rel="stylesheet" href="assets/css/fontawesome-all.css">
+    <link rel="stylesheet" href="assets/css/simple-line-icons.css">
+    <link rel="stylesheet" href="assets/css/animate.css">
+    <link rel="stylesheet" href="assets/css/flaticon.css">
+    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/css/video.min.css">
+    <link rel="stylesheet" href="assets/css/lightbox.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
@@ -30,167 +31,110 @@
 <!-- Start of header section
 	============================================= -->
 	<header id="header_id" class="main_header header_style_one">
-		<div class="header_top">
-			<div class="container">
-				<div class="row">
-					<div class="col-md-6">
-						<div class="header_top_contact ul-li clearfix">
-							<ul>
-								<li> <i class="icon-call-out"></i> XXX</li>
-								<li> <i class="icon-envelope-letter"></i> XXX</li>
-							</ul>
-						</div>
-					</div>
-					<div class="col-md-6">
-						<div class="header_top_info float-right">
-							<div class="top_info_item top_info_menu ul-li clearfix">
-								<ul>
-									<li><a href="#">Careers</a></li>
-									<li><a href="#">Media</a></li>
-									<li><a href="#">FAQs</a></li>
-								</ul>
-							</div>
-							<div class="top_info_item top_info_social ul-li clearfix">
-								<ul>
-									<li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-									<li><a href="#"><i class="fab fa-twitter"></i></a></li>
-									<li><a href="#"><i class="fab fa-google-plus-g"></i></a></li>
-									<li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
-									<li><a href="#"><i class="fab fa-vimeo-v"></i></a></li>
-								</ul>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="site-main-menu clearfix">
-			<div class="container">
-				<div class="brand-logo float-left">
-					<a href="#"><img src="assets/img/logo/logo1.png" alt=""></a>
-				</div>
-				<nav class="main_navigation desktop-menu ul-li">
-					<ul id="main-nav" class="navbar-nav text-uppercase clearfix">
-						<li class="dropdown">
-							<a href="#">Home</a>
-							<ul class="dropdown-menu clearfix">
-								<li><a href="index.html">Home Page 1</a></li>
-								<li><a href="index-2.html">Home Page 2</a></li>
-							</ul>
-						</li>
-						<li><a href="about.html">About</a></li>
-						<li class="dropdown">
-							<a href="#">Services</a>
-							<ul class="dropdown-menu clearfix">
-								<li><a href="service.html">Service</a></li>
-								<li><a href="service-single.html">Details</a></li>
-							</ul>
-						</li>
-						<li class="dropdown">
-							<a href="#"> News</a>
-							<ul class="dropdown-menu clearfix">
-								<li><a href="blog.html">Blog</a></li>
-								<li><a href="blog-single.html">Details</a></li>
-							</ul>
-						</li>
-						<li><a href="#">Gallery</a></li>
-						<li><a href="contact.html">Contact</a></li>
-					</ul>
-				</nav>
-				<div class="site-search-btn float-right">
-					<div class="el-search position-relative">
-						<i class="el-search-btn fas fa-search"></i>
-						<div class="search-body">
-							<div class="search-form">
-								<form action="#">
-									<input class="search-input" type="search" placeholder="Search Here">
-									<div class="outer-close el-search-btn">
-										<i class="fas fa-times"></i>
-									</div>
-									<button type="submit" class="search-close">
-										<i class="fas fa-search"></i>
-									</button>
-								</form>
-							</div>
-						</div>
-					</div>
-					<div class="con-btn text-center  text-uppercase">
-						<a href="#">consultation <i class="flaticon-next"></i></a>
-					</div>
-				</div>
-			</div>
-		</div>
-		<!-- desktop-menu -->
-		<div class="el-mobile_menu relative-position">
-			<div class="el-mobile_menu_button s2-open_mobile_menu">
-				<i class="fas fa-bars"></i>
-			</div>
-			<div class="el-mobile_menu_wrap">
-				<div class="mobile_menu_overlay s2-open_mobile_menu"></div>
-				<div class="el-mobile_menu_content">
-					<div class="el-mobile_menu_close s2-open_mobile_menu">
-						<i class="fas fa-arrow-circle-right"></i>
-					</div>
-					<div class="m-brand-logo text-center">
-						<a href="#"><img src="assets/img/logo/logo1.png" alt=""></a>
-					</div>
-					<div class="mobile-search">
-						<form class="form-item position-relative" action="#" method="">
-							<input type="search" placeholder="search...">
-							<button type="submit" ><i class="fas fa-search"></i></button>
-						</form>
-					</div>
-					<nav class="el-mobile-main-navigation  clearfix ul-li">
-						<ul id="main-nav" class="navbar-nav text-capitalize clearfix">
-							<li class="dropdown">
-								<a href="#">Home</a>
-								<ul class="dropdown-menu clearfix">
-									<li><a href="index.html">Home Page 1</a></li>
-									<li><a href="index-2.html">Home Page 2</a></li>
-								</ul>
-							</li>
-							<li><a href="about.html">About</a></li>
-							<li class="dropdown">
-								<a href="#">Services</a>
-								<ul class="dropdown-menu clearfix">
-									<li><a href="service.html">Service</a></li>
-									<li><a href="service-single.html">Details</a></li>
-								</ul>
-							</li>
-							<li class="dropdown">
-								<a href="#"> News</a>
-								<ul class="dropdown-menu clearfix">
-									<li><a href="blog.html">Blog</a></li>
-									<li><a href="blog-single.html">Details</a></li>
-								</ul>
-							</li>
-							<li><a href="#">Gallery</a></li>
-							<li><a href="contact.html">Contact</a></li>
-						</ul>
-					</nav>
-					<div class="mobile-contact-info text-center ul-li-block">
-						<ul>
-							<li> <i class="icon-call-out"></i> XXX</li>
-							<li> <i class="icon-envelope-letter"></i> XXX</li>
-						</ul>
-					</div>
-					<div class="mobile-follow text-center ul-li">
-						<span>Follow Eltron:</span>
-						<ul>
-							<li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-							<li><a href="#"><i class="fab fa-twitter"></i></a></li>
-							<li><a href="#"><i class="fab fa-google-plus-g"></i></a></li>
-							<li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
-							<li><a href="#"><i class="fab fa-vimeo-v"></i></a></li>
-						</ul>
-					</div>
-					<div class="mobile-consult-btn text-uppercase">
-						<a href="#">Consultation</a>
-					</div>
-				</div>
-			</div>
-		</div>
-	</header>
+    <div class="header_top">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="header_top_contact ul-li clearfix">
+                        <ul>
+                            <li><i class="icon-call-out"></i> 1800 810 680</li>
+                            <li><i class="icon-envelope-letter"></i> <a href="mailto:community.input@ghd.com">community.input@ghd.com</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="header_top_info float-right">
+                        <div class="top_info_item top_info_menu ul-li clearfix">
+                        </div>
+                        <div class="top_info_item top_info_social ul-li clearfix">
+                            <ul>
+                                <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+                                <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                                <li><a href="#"><i class="fab fa-google-plus-g"></i></a></li>
+                                <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+                                <li><a href="#"><i class="fab fa-vimeo-v"></i></a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="site-main-menu clearfix">
+        <div class="container">
+            <div class="brand-logo float-left">
+                <a href="index.html"><img src="assets/img/logo/logo1.png" alt=""></a>
+            </div>
+            <nav class="main_navigation desktop-menu ul-li">
+                <ul id="main-nav" class="navbar-nav text-uppercase clearfix">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="technology.html">Technology</a></li>
+                    <li><a href="Products.html">Products</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </nav>
+            <div class="site-search-btn float-right">
+                <div class="el-search position-relative">
+                    <i class="el-search-btn fas fa-search"></i>
+                    <div class="search-body">
+                        <div class="search-form">
+                            <form action="#">
+                                <input class="search-input" type="search" placeholder="Search Here">
+                                <div class="outer-close el-search-btn">
+                                    <i class="fas fa-times"></i>
+                                </div>
+                                <button type="submit" class="search-close">
+                                    <i class="fas fa-search"></i>
+                                </button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+                <div class="con-btn text-center  text-uppercase">
+                    <a href="#">consultation <i class="flaticon-next"></i></a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- desktop-menu -->
+    <div class="el-mobile_menu relative-position">
+        <div class="el-mobile_menu_button s2-open_mobile_menu">
+            <i class="fas fa-bars"></i>
+        </div>
+        <div class="el-mobile_menu_wrap">
+            <div class="mobile_menu_overlay s2-open_mobile_menu"></div>
+            <div class="el-mobile_menu_content">
+                <div class="el-mobile_menu_close s2-open_mobile_menu">
+                    <i class="fas fa-arrow-circle-right"></i>
+                </div>
+                <div class="m-brand-logo text-center">
+                    <a href="#"><img src="assets/img/logo/logo1.png" alt=""></a>
+                </div>
+                <nav class="el-mobile-main-navigation  clearfix ul-li">
+                    <ul id="main-nav" class="navbar-nav text-capitalize clearfix">
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="about.html">About</a></li>
+                        <li><a href="technology.html">Technology</a></li>
+                        <li><a href="Products.html">Products</a></li>
+                        <li><a href="contact.html">Contact</a></li>
+                    </ul>
+                </nav>
+                <div class="mobile-contact-info text-center ul-li-block">
+                    <ul>
+                        <li><i class="icon-call-out"></i> 1800 810 680</li>
+                        <li><i class="icon-envelope-letter"></i>
+                            <a href="mailto:community.input@ghd.com">
+                                community.input@ghd.com
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+</header>
 <!-- End of header section
 	============================================= -->
 
@@ -384,54 +328,55 @@
 <!-- Start of Footer section
 	============================================= -->
 <footer id="footer-id" class="footer-section">
-
     <div class="footer-content">
         <div class="container">
-
             <br/><br/>
             <div class="footer-widget-area">
                 <div class="row">
 
-                    <div class="col-lg-3 col-md-6">
+                    <div class="col-lg-6 col-md-6">
                         <div class="footer-widget-item pera-content">
                             <div class="footer-menu-widget ul-li-block">
                                 <h3 class="el-widget-title"><a href="news.html">Industry information</a></h3>
+                                <ul>
+                                    <li><a href="detail.html">2017-18 Australian Plastics Recycling Survey</a></li>
+                                    <li><a href="detail1.html">National Waste Report 2018</a></li>
+                                </ul>
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-md-6">
-                        <div class="footer-widget-item pera-content">
-                            <div class="footer-menu-widget ul-li-block">
-                                <h3 class="el-widget-title"><a href="technology.html"></a></h3>
+                    <!--                    <div class="col-lg-3 col-md-6">-->
+                    <!--                        <div class="footer-widget-item pera-content">-->
+                    <!--                            <div class="footer-menu-widget ul-li-block">-->
+                    <!--                                <h3 class="el-widget-title"><a href="technology.html"></a></h3>-->
+                    <!--                            </div>-->
+                    <!--                        </div>-->
+                    <!--                    </div>-->
+                    <!--                    <div class="col-lg-3 col-md-6">-->
+                    <!--                        <div class="footer-widget-item pera-content">-->
+                    <!--                            <div class="footer-location-widget ul-li-block">-->
+                    <!--                                <h3 class="el-widget-title">Our Locations</h3>-->
+                    <!--                                <div class="loaction-select position-relative">-->
+                    <!--                                    <p>74-76 Beaconsfield Road，Moss Vale</p>-->
+                    <!--                                </div>-->
+                    <!--                                <div class="footer-map">-->
 
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6">
-                        <div class="footer-widget-item pera-content">
-                            <div class="footer-location-widget ul-li-block">
-                                <h3 class="el-widget-title">Our Locations</h3>
-                                <div class="loaction-select position-relative">
-                                    <p>74-76 Beaconsfield Road，Moss Vale</p>
-                                </div>
-                                <div class="footer-map">
-
-                                    <img style="height: 100%" src="assets/img/contact/1.jpg">
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                    <!--                                    <img style="height: 100%" src="assets/img/contact/1.jpg">-->
+                    <!--                                </div>-->
+                    <!--                            </div>-->
+                    <!--                        </div>-->
+                    <!--                    </div>-->
                 </div>
             </div>
         </div>
     </div>
     <div class="footer-copyright-text text-center">
-        <p>Copyright &copy; 2020.Company name All rights reserved.</p>
-        <div class="copyright-menu">
-            <a href="#">Terms</a>
-            <a href="#"> Privacy Policy </a>
-            <a href="#">Sitemap</a>
-        </div>
+        <p>Copyright &copy; 2021.Haoming Partner All rights reserved.</p>
+        <!--        <div class="copyright-menu">-->
+        <!--            <a href="#">Terms</a>-->
+        <!--            <a href="#"> Privacy Policy </a>-->
+        <!--            <a href="#">Sitemap</a>-->
+        <!--        </div>-->
     </div>
 </footer>
 <!-- End of Footer section
